fix: set memtrack binary path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,16 +34,19 @@ jobs:
           bins: cargo-codspeed
 
 
-      # FIXME: Install released binary
-      - name: Install dependencies required for libbpf-sys (vendored feature)
-        run: sudo apt-get update && sudo apt-get install -y autopoint bison flex
-      - run: cargo install memtrack --git https://github.com/CodSpeedHQ/runner/
-
       - name: Build the benchmark target(s)
         run: cargo codspeed build
 
       - name: Install the runner
         run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v4.4.2-beta.1/codspeed-runner-installer.sh | sh
+
+      # FIXME: Install released binary
+      - name: Install dependencies required for libbpf-sys (vendored feature)
+        run: sudo apt-get update && sudo apt-get install -y autopoint bison flex
+      - run: |
+          cargo install memtrack --git https://github.com/CodSpeedHQ/runner/
+          echo "CODSPEED_MEMTRACK_BINARY=$(which codspeed-memtrack)" >> $GITHUB_ENV
+
 
       # FIXME: Later on, ensure it works with sudo in the action
       - run: codspeed run --mode ${{ matrix.mode }} --api-url https://gql.staging.preview.codspeed.io/ --upload-url https://api.staging.preview.codspeed.io/upload  -- target/codspeed/analysis/matthias-memory-profiling-demo/rle_bench
