--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
-divan = { version = "4.1.0", package = "codspeed-divan-compat" }
+divan = { package = "codspeed-divan-compat", git = "https://github.com/CodSpeedHQ/codspeed-rust/", branch = "cod-1711-codspeed-rust-add-analysis-mode-support" }
 
 [[bench]]
 name = "rle_bench"
