chore: simplify actions.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,8 @@ jobs:
           cache-target: release
           bins: cargo-codspeed
 
-
       - name: Build the benchmark target(s)
         run: cargo codspeed build -m instrumentation
-
-      - name: Install the runner
-        run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/v4.4.2-beta.1/codspeed-runner-installer.sh | sh
-        # run: cargo install codspeed-runner --git https://github.com/codSpeedHQ/runner/ --branch cod-1793-runner-foward-environment-in-sudo
 
       - name: Install memtrack from pre-built artifact
         run: |
@@ -56,16 +51,14 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
-      # FIXME: Later on, ensure it works with sudo in the action
-      - run: codspeed run --mode ${{ matrix.mode }} --api-url https://gql.staging.preview.codspeed.io/ --upload-url https://api.staging.preview.codspeed.io/upload  -- target/codspeed/instrumentation/matthias-memory-profiling-demo/rle_bench
-
-      # - name: Run the benchmarks
-      #   uses: CodSpeedHQ/action@main
-      #   with:
-      #     runner-version: v4.4.2-beta.1
-      #     mode: ${{ matrix.mode }}
-      #     run: cargo codspeed run
-      #     upload-url: https://api.staging.preview.codspeed.io/upload
+      - name: Run the benchmarks
+        uses: CodSpeedHQ/action@main
+        with:
+          runner-version: v4.4.2-beta.1
+          mode: ${{ matrix.mode }}
+          run: target/codspeed/instrumentation/matthias-memory-profiling-demo/rle_bench
+          # run: cargo codspeed run
+          upload-url: https://api.staging.preview.codspeed.io/upload
 
 
 
