--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,10 @@ jobs:
         with:
           channel: stable
           cache-target: release
-          bins: cargo-codspeed
+          # bins: cargo-codspeed
+
+      - name: Install cargo-codspeed (latest version)
+        run: cargo install --git https://github.com/CodSpeedHQ/codspeed-rust/ --branch cod-1711-codspeed-rust-add-analysis-mode-support cargo-codspeed
 
       - name: Build the benchmark target(s)
         run: cargo codspeed build
