--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
         include:
           - mode: memory
             runner: ubuntu-latest
-          - mode: walltime
-            runner: codspeed-macro
+          # - mode: walltime
+          #   runner: codspeed-macro
     steps:
       - uses: actions/checkout@v5
       - name: Setup rust toolchain, cache and cargo-codspeed binary
@@ -40,7 +40,12 @@ jobs:
         run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/memtrack-v1.0.1-alpha.1/memtrack-installer.sh | sh
 
       - name: Build the benchmark target(s)
-        run: cargo codspeed build
+        run: |
+          if [ "${{ matrix.mode }}" = "memory" ]; then
+            cargo codspeed build -m analysis
+          else
+            cargo codspeed build
+          fi
 
       - name: Run the benchmarks
         uses: CodSpeedHQ/action@main
