--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,7 @@ jobs:
         run: cargo install --git https://github.com/CodSpeedHQ/codspeed-rust/ --branch cod-1711-codspeed-rust-add-analysis-mode-support cargo-codspeed
 
       - name: Install memtrack (temp until runner is released)
-        run: | 
-          sudo apt-get update && sudo apt-get install -y autopoint bison flex
-          cargo install --git https://github.com/CodSpeedHQ/runner/ --branch main memtrack
+        run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/CodSpeedHQ/runner/releases/download/memtrack-v1.0.1-alpha.3/memtrack-installer.sh | sh
 
       - name: Build the benchmark target(s)
         run: |
@@ -52,7 +50,7 @@ jobs:
       - name: Run the benchmarks
         uses: CodSpeedHQ/action@main
         with:
-          runner-version: branch:fix-filter-out-empty-symbols
+          runner-version: 4.4.2-alpha.3
           mode: ${{ matrix.mode }}
           run: cargo codspeed run
           upload-url: https://api.staging.preview.codspeed.io/upload
